--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,23 @@
 
 # Backup entities generated with doctrine:generate:entities command
 **/Entity/*~
+
+
+/app/config/parameters.yml
+/build/
+/phpunit.xml
+/var/
+!/var/cache
+/var/cache/
+!var/cache/.gitkeep
+!/var/logs
+/var/logs/
+!var/logs/.gitkeep
+!/var/sessions
+/var/sessions/
+!var/sessions/.gitkeep
+!var/SymfonyRequirements.php
+/vendor/
+/web/bundles/
+
+/composer.phar
